--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">WatchTogether</string>
+    <string name="profile">Profile</string>
+    <string name="movies">Movies</string>
+    <string name="matches">Matches</string>
 </resources>
