Prepare for A1-A3 assignment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,39 @@
     <string name="profile">Profile</string>
     <string name="movies">Movies</string>
     <string name="matches">Matches</string>
+    <string name="create_user">Create User</string>
+    <string name="name">Name</string>
+    <string name="nickname">Nickname</string>
+    <string name="create">Create</string>
+    <string name="disliked_movies">Disliked Movies</string>
+    <string name="edit_profile">Edit profile</string>
+    <string name="back">Back</string>
+    <string name="save">Save</string>
+    <string name="photo">Photo</string>
+    <string name="user_photo">User photo</string>
+    <string name="liked_movies">Liked Movies</string>
+    <string name="cancel">Cancel</string>
+    <string name="delete">Delete</string>
+    <string name="search">Search</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="select_genres">Select genres</string>
+    <string name="select_your_favorite_genres_to_get_movies_tailored_to_your_taste">Select your favorite genres to get movies tailored to your taste:</string>
+    <string name="show_my_favorites">Show my favorites</string>
+    <string name="not_implemented_yet">Not implemented yet</string>
+    <string name="swipe_right">swipe right</string>
+    <string name="swipe_left">swipe left</string>
+    <string name="select_user">Select User</string>
+    <string name="create_new_user">Create new user</string>
+    <string name="delete_user_s">Delete user(s)?</string>
+    <string name="are_you_sure_you_want_to_delete_user_s">Are you sure you want to delete user(s)?</string>
+    <string name="specify_favorite_genres">Specify favorite genres</string>
+    <string name="reset_rated_movies">Reset rated movies</string>
+    <string name="reset_rated_movies_question">Reset rated movies?</string>
+    <string name="are_you_sure_you_want_to_reset">Are you sure you want to reset?</string>
+    <string name="logout">Logout</string>
+    <string name="edit">Edit</string>
+    <string name="edit_info">Edit info</string>
+    <string name="delete_movie_s">Delete movie(s)?</string>
+    <string name="are_you_sure_you_want_to_delete_it">Are you sure you want to delete it?</string>
 </resources>
